connecting with server

--- a/AndroidClient/common/src/main/res/values/strings.xml
+++ b/AndroidClient/common/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
 
     <!-- ошибки соединения/сети -->
     <string name="not_net">Отсутствует подключение к сети</string>
+    <string name="server_attempt_fail">Не удалось подключиться к серверу</string>
 
     <!-- сообщения/ответы пользователя -->
     <string name="fields_not_filled">Не все поля заполнены!</string>
