--- a/AndroidClient/common/src/main/res/values/strings.xml
+++ b/AndroidClient/common/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
 
     <!-- сообщения/ответы пользователя -->
     <string name="fields_not_filled">Не все поля заполнены!</string>
+    <string name="exit_app">Выйти из приложения?</string>
+    <string name="yes">Да</string>
+    <string name="no">Нет</string>
 </resources>
