storage activity+loyaut

--- a/AndroidClient/common/src/main/res/values/strings.xml
+++ b/AndroidClient/common/src/main/res/values/strings.xml
@@ -29,4 +29,10 @@
     <string name="exit_app">Выйти из приложения?</string>
     <string name="yes">Да</string>
     <string name="no">Нет</string>
+
+    <!-- заголовки активити -->
+    <string name="storage_activity_title">Файлы</string>
+
+    <!-- описания картинок -->
+    <string name="file_description">view_file</string>
 </resources>
